# smol

./: .gitignore  ONBOARDING.md  README.md  sync.sh
.github/: dependabot.yml
.github/workflows/: pages.yml
blockdigger/: blockdigger.ino
collector/: .gitignore  README.md  collector.py  smol-collector.service  test_collector.py
docs/: 9-dollar-mmo-story.md  BUILDING.md  README.md  ROADMAP.md  board-repos.md  cases.md  enclosure-resin.md  firmware-ideas.md  gaming-firmware.md  home-assistant.md  le-audio.md  mesh-snake.md  nes-on-c3.md  ota.md  power.md  protocol.md  relay.md  sound.md  walkie-talkie.md  wearables.md
docs/superpowers/design/: best-relay-etx.md  peer-sourced-mesh-ota.md
docs/superpowers/research/: althea-babel-study.md  coexist-disease-esp-radio-018-study.md  inspirations-coverage.md  mesh-ledger-study.md  nuttx-bench-notes.md  reliable-mesh-ota-architectures.md  riot-espnow-study.md
docs/superpowers/specs/: 2026-07-15-mesh-rpg-design.md  2026-07-18-mesh-visualizers-design.md  2026-07-19-mesh-auth-design.md
experiments/185_crdt_verify/: Cargo.toml
experiments/185_crdt_verify/src/: main.rs
experiments/267_resume_verify/: Cargo.toml
experiments/267_resume_verify/src/: main.rs
experiments/ap_select_verify/: Cargo.toml
experiments/ap_select_verify/src/: main.rs
experiments/arb_verify/: Cargo.toml
experiments/arb_verify/src/: main.rs
experiments/atomic14-games/: README.md
experiments/atomic14-games/.github/workflows/: build-esp32-c3-games.yml
experiments/atomic14-games/esp32-c3-games/: BreakoutGame.cpp  BreakoutGame.h  DefenderMiniGame.cpp  DefenderMiniGame.h  Game.cpp  Game.h  HeliCaveGame.cpp  HeliCaveGame.h  JumpGame.cpp  JumpGame.h  MicroRacerGame.cpp  MicroRacerGame.h  esp32-c3-games.ino
experiments/case-mod/: deepen.py
experiments/case-mod/modified/: esp32c6down3_battery.stl
experiments/case-mod/original/: esp32c6down3.stl  esp32c6top3.stl
experiments/dns_verify/: Cargo.toml
experiments/dns_verify/src/: main.rs
experiments/election_verify/: Cargo.toml
experiments/election_verify/src/: main.rs
experiments/etx_verify/: Cargo.toml
experiments/etx_verify/src/: main.rs
experiments/flood_verify/: Cargo.toml
experiments/flood_verify/src/: main.rs
experiments/ledger_verify/: Cargo.toml
experiments/ledger_verify/src/: main.rs
experiments/mac_verify/: Cargo.toml
experiments/mac_verify/src/: main.rs
experiments/nes-c3/Anemoia-ESP32/: .clang-format  Anemoia-ESP32.ino  README.md  config.h  config_cyd.h  config_discrete.h  config_module.h  partitions.csv  runtime_config.h
experiments/nes-c3/Anemoia-ESP32/User_Setups/8bit-parallel/: User_Setup.h
experiments/nes-c3/Anemoia-ESP32/User_Setups/CYD/: User_Setup.h
experiments/nes-c3/Anemoia-ESP32/User_Setups/Default/: User_Setup.h
experiments/nes-c3/Anemoia-ESP32/src/: ControllerTypes.h  composite_video.h  controller.cpp  controller.h  debug.h  flash_mmap.cpp  flash_mmap.h  gpio.h  ui.cpp  ui.h
experiments/ota_http_verify/: Cargo.toml
experiments/ota_http_verify/src/: main.rs
experiments/pocketwatch/: README.md  pocketwatch.py  pocketwatch_assembly.stl  pocketwatch_body.stl  pocketwatch_crown.stl  pocketwatch_lid.stl  render_previews.py
experiments/pocketwatch/slim/: pocketwatch_assembly.stl
experiments/relay_compat/: Cargo.toml
experiments/relay_compat/src/: main.rs
experiments/sth_verify/: Cargo.toml
experiments/sth_verify/src/: main.rs
experiments/treehead_verify/: Cargo.toml
experiments/treehead_verify/src/: main.rs
experiments/wx_verify/: Cargo.toml
experiments/wx_verify/src/: main.rs
games/snake/: snake.ino
games/snake-2p/: README.md  snake-2p.ino
ha/: README.md
ha/dashboard/: .gitignore  README.md  build_control_room.py  smol-control-scaffold.yaml  smol_control_room.yaml  smol_display_card.yaml  smol_network_card.yaml  smol_nodemgr_card.yaml  smol_ota_card.yaml  smol_topology_card.yaml
ha/themes/: smol.yaml
ha/www/luna-fonts/: ATTRIBUTION.md
oled_test/: oled_test.ino
rust/clock/: Cargo.toml  README.md  build.rs  partitions-ota.csv  rust-toolchain.toml
rust/clock/.cargo/: config.toml
rust/clock/src/: about.rs  app.rs  batt.rs  bench.rs  board.rs.example  clock.rs  custom.rs  finder.rs  grid.rs  hunt.rs  input.rs  io.rs  led.rs  lib.rs  main.rs  menu.rs  net.rs  ota.rs  ota_mesh.rs  ota_screen.rs  rssi.rs  secrets.rs.example  sensors.rs  sigil.rs  snake.rs  toast.rs  units.rs  watch.rs  weather.rs
rust/clock/src/familiar/: mod.rs
rust/clock/src/mesh_snake/: mod.rs  snake_core.rs
rust/clock/src/net/: ble.rs  ble_scan.rs  cast.rs  cast_oled.rs  coexist.rs  crdt.rs  dns.rs  election.rs  etx.rs  flood.rs  http.rs  ledger.rs  ledger_link.rs  mode.rs  mqtt.rs  names.rs  ota_resume.rs  radio_dev.rs  sth.rs  treehead.rs  wifi.rs  wire.rs  wled.rs  wx.rs
rust/meshscope/: Cargo.toml  README.md
rust/meshscope/src/: main.rs  model.rs  mqtt.rs  names.rs
rust/meshscope/src/ui/: graph.rs  mod.rs  panel.rs  ticker.rs
rust/spike-embassy/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
rust/spike-embassy/.cargo/: config.toml
rust/spike-embassy/src/: main.rs  secrets.rs.example
rust/viz/: Cargo.toml
rust/viz/mesh-model/: Cargo.toml
rust/viz/mesh-model/src/: lib.rs  model.rs  mqtt.rs  parse.rs
rust/viz/meshscope/: .env.example  .gitignore  Cargo.toml
rust/viz/meshscope/src/: main.rs  operator.rs
rust/viz/meshscope/src/ui/: graph.rs  mod.rs  opdock.rs  panel.rs  ticker.rs
rust/viz/observatory/: .env.example  .gitignore  Cargo.toml  README.md
rust/viz/observatory/src/: main.rs  mesh.rs  palette.rs
rust/viz/observatory/src/viz/: edges.rs  effects.rs  hud.rs  mod.rs  nodes.rs
rust/web-emu/: Cargo.toml
rust/web-emu/src/: lib.rs
site/: agents.json  app.js  content.json  dollhouse.html  index.html  server.py  tasks.json
site/fonts/: OFL.txt  README.md  fonts.css
tools/: ota_publish.env.example  ota_publish.sh  ota_verify.sh  repro_build.sh  test_ota_ratchet.sh  verify_image.sh
watch/: README.md  watch.ino
web/emulator/: build.sh  index.html  index.template.html
(+28 files in other folders)
