[package]
name = "clock"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
description = "smol: ESP32-C3 SuperMini + 0.42\" SSD1306 OLED clock with WiFi/NTP + ESP-NOW"
license = "MIT OR Apache-2.0"

# -----------------------------------------------------------------------------
# Pinned, mutually-compatible crate versions.
#
# The esp-hal / esp-wifi / esp-hal-embassy / esp-alloc quartet is extremely
# version-sensitive because esp-wifi links against esp-hal INTERNAL APIs, and
# its Cargo `^1.0.0-rc.0` requirement is looser than what actually compiles.
#
# THE KEY GOTCHA: esp-wifi 0.15.x calls `esp_hal::rng::Rng::new(peripherals.RNG)`
# internally. In esp-hal 1.0.0-rc.1 and the 1.0.0 release, `Rng::new()` was
# changed to take NO argument, which makes esp-wifi 0.15.x fail to compile
# ("this function takes 0 arguments but 1 was supplied") even though Cargo's
# semver check passes. We therefore pin esp-hal to the EXACT release esp-wifi
# 0.15.x was built against: the 2025-07-16 cluster.
#
#   esp-hal          1.0.0-rc.0  (2025-07-16; Rng::new(RNG) still takes the peripheral)
#   esp-wifi         0.15.0      (2025-07-16; requires esp-alloc ^0.8.0)
#   esp-hal-embassy  0.9.0       (2025-07-16)
#   esp-alloc        0.8.0
#   esp-backtrace    0.17.0      (2025-07-16)
#   esp-println      0.15.0      (2025-07-16)
#
# ssd1306 0.10.0 + embedded-graphics 0.8 target embedded-hal 1.0, which esp-hal
# 1.x implements, so the display stack composes cleanly with the HAL.
# -----------------------------------------------------------------------------

[dependencies]
# --- Core HAL (Phase 1, always on) ---------------------------------------
# `unstable` is required for I2C/SPI/RNG and is also a hard requirement of
# esp-wifi. `esp32c3` selects the chip. `rt` + `exception-handler` come from
# the default features (runtime + fault handler).
esp-hal = { version = "=1.0.0-rc.0", features = ["esp32c3", "unstable"] }
# NOTE: esp-hal's default features already install the exception handler, so
# esp-backtrace only provides the panic handler + backtrace printing here.
# Enabling esp-backtrace's `exception-handler` too causes a duplicate
# `ExceptionHandler` symbol and an LTO bitcode-load failure at link time.
esp-backtrace = { version = "=0.17.0", features = ["esp32c3", "panic-handler", "println"] }
# Force the USB Serial/JTAG backend explicitly. This board's console is the
# native USB Serial/JTAG link (/dev/ttyACM0); esp-println's default `auto`
# backend only routes to USB-JTAG when it detects host SOF packets at the
# instant it writes, which proved unreliable during the busy WiFi burst and
# left app logs going to the (unwired) UART0. `jtag-serial` pins the output to
# USB-JTAG so boot/WiFi/NTP/ESP-NOW logs always appear on /dev/ttyACM0.
esp-println = { version = "=0.15.0", default-features = false, features = [
    "esp32c3",
    "log-04",
    "jtag-serial",
    "colors",
    "critical-section",
] }
log = "0.4"
# `nb::block!` turns esp-hal's non-blocking `Adc::read_oneshot` (nb::Result) into
# a short busy-wait for the battery-voltage read in `src/sensors.rs`. Resolves to
# the 1.1.0 already in the tree (embedded-hal etc. depend on it) — no lock churn.
nb = "1"

# --- Display stack (Phase 1, always on) ----------------------------------
ssd1306 = "=0.10.0"
embedded-graphics = "=0.8.1"

# --- WiFi / NTP (Phase 2, feature = "wifi") ------------------------------
# esp-alloc pinned to 0.8.x to satisfy esp-wifi 0.15.1's `^0.8.0` requirement.
esp-alloc = { version = "=0.8.0", optional = true }
esp-wifi = { version = "=0.15.0", optional = true, default-features = false, features = [
    "esp32c3",
    "wifi",
    "esp-alloc",
    "smoltcp",
    # esp-wifi needs a preemption scheduler backing its `esp_wifi_preempt_*`
    # os-adapter hooks. `builtin-scheduler` is normally in esp-wifi's default
    # feature set, but we set `default-features = false`, so we must re-add it
    # explicitly (otherwise: `undefined symbol: esp_wifi_preempt_*` at link).
    "builtin-scheduler",
] }
smoltcp = { version = "=0.12.0", optional = true, default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "proto-dhcpv4",
    "socket-udp",
    "socket-dhcpv4",
    "socket-tcp",
] }

# --- OTA (Phase B, issue #6) — HAL-decoupled, folded into `wifi` ----------
# Spike-proven co-compile with the pinned quartet (WAVE 10). Both are optional
# and pulled ONLY by `wifi`, so the `default` (no-radio) build compiles NO OTA
# code. `esp32c3` on esp-bootloader-esp-idf is REQUIRED — without it the crate's
# rom.rs references an unresolved `esp_rom_sys` (md5/crc pulled by the chip
# feature). esp-storage gives XIP-safe flash writes (FlashStorage auto-detects
# 4 MB); esp-bootloader-esp-idf gives the otadata slot/state API + esp_app_desc!.
esp-storage = { version = "=0.7.0", optional = true, features = ["esp32c3"] }
esp-bootloader-esp-idf = { version = "=0.2.0", optional = true, features = ["esp32c3"] }
# Software SHA-256 for the OTA image integrity gate. Chosen over the HW `esp_hal::sha`
# peripheral deliberately: the HW path needs the SHA peripheral threaded through boot
# into the OTA burst + a self-referential `ShaDigest` (borrows the `Sha` beside it),
# whereas `sha2` is peripheral-free + move-friendly. Cost is ~4 KB flash — negligible
# at ~30% slot usage (3.3x headroom). Hashing is bound by the ~600 KB HTTP download,
# not the digest, so there's no throughput reason to prefer HW here. (spec §Stage C-4.)
sha2 = { version = "0.10", default-features = false, optional = true }
# The `NorFlash` trait (erase/write) whose impl on esp-storage's FlashStorage the OTA
# ImageWriter drives. Trait-only crate; pin to the 0.3.x esp-storage already links.
embedded-storage = { version = "0.3", optional = true }
# #32 OTA authenticity: Ed25519 VERIFY-ONLY over the signed manifest ("build|size|sha256").
# no_std, pure-Rust, no getrandom/curve25519 (self-contained) — spike-proven co-compile vs the
# pinned quartet on riscv32imc (issue-32-spike-result.md). Gated in `espnow` (only run_ota_fetch
# verifies) → default/wifi-only builds pull NO crypto. ⚠️ REQUIRES the opt-z per-pkg override in
# [profile.release.package.ed25519-compact] below — without it the scalar-mult unrolls to ~1.19 MB.
ed25519-compact = { version = "2", default-features = false, optional = true }

# --- ESP-NOW (Phase 3, feature = "espnow") -------------------------------
# ESP-NOW support lives inside esp-wifi behind its `esp-now` feature.
# (No extra top-level crate; the feature is toggled on esp-wifi below.)

# --- BLE observer (#22, feature = "ble") ---------------------------------
# esp-wifi's blocking `BleConnector` sends/receives raw HCI via `embedded_io::{Read,
# Write}`. We need the `Write` trait in scope to push the two passive-scan commands.
# embedded-io is ALREADY in the tree (a transitive dep of esp-hal/esp-wifi — `=0.6.1`
# in Cargo.lock); this just names it directly so `ble` code can call `.write()`. Pinned
# to the locked version → no Cargo-pin churn against the frozen quartet. NO host BLE
# stack (trouble-host/bleps) is pulled: passive scan is raw HCI (see net/ble.rs).
embedded-io = { version = "=0.6.1", optional = true }

[features]
# Phase 1 only: clock on the OLED. This is the default so `cargo build
# --release` with no flags exercises the guaranteed-green baseline.
default = []

# Phase 2: WiFi STA + SNTP time sync (+ optional weather).
# Also carries OTA (issue #6): the flash/otadata crates + esp-backtrace's
# `custom-halt` (panic→software_reset, MF-2) are pulled in HERE, not on the base
# esp-backtrace dep, so the `default` build's panic behavior stays the stock
# loop{} (OTA rollback semantics only matter once there's a radio to fetch over).
wifi = [
    "dep:esp-alloc",
    "dep:esp-wifi",
    "dep:smoltcp",
    "dep:esp-storage",
    "dep:esp-bootloader-esp-idf",
    "dep:sha2",
    "dep:embedded-storage",
    "esp-backtrace/custom-halt",
]

# Phase 3: ESP-NOW peer messaging + WiFi<->ESP-NOW switching.
# Builds on `wifi` (shares the radio init path) and turns on esp-wifi/esp-now.
espnow = ["wifi", "esp-wifi/esp-now", "dep:ed25519-compact"]

# #25 WLED WiZmote-emit: smol impersonates a WLED "linked remote" (13-B WiZmote
# ESP-NOW broadcast). Needs the ESP-NOW broadcast path + RadioManager, so it builds
# on `espnow`. Nothing new links — pure encode + the existing `esp_now.send`. The
# default build is BYTE-FREE of it (symbol-absence provable; net/wled.rs is
# `#![cfg(feature = "wled")]` and every hook is `#[cfg(feature = "wled")]`).
wled = ["espnow"]

# #26 smol Cast: mirror the gateway's OLED image onto a network WLED matrix as
# realtime UDP pixels (DNRGB, :21324) — NOT ESP-NOW (cleaner than #25's control path).
# Builds on `espnow` (⊃ `wifi`): casting is a GATEWAY-role activity — it needs an
# associated STA to reach the matrix AND the recurring gateway flush that carries the
# stream, both of which only the espnow build has (a wifi-only board only associates
# once at boot). Pure-additive: NO new crate links — a DrawTarget tee mirrors the
# framebuffer, a pure packer encodes DNRGB, and the existing flush association carries
# it. The default / wifi / espnow / wled builds are BYTE-FREE of it (`net::cast*` is
# `#[cfg(feature = "cast")]` and every hook is cfg-gated; the `Oled` type only swaps to
# the tee under this flag).
cast = ["espnow"]

# COEXIST SOAK (issue #23 PART 1 — the gating experiment, NOT for production).
# The gateway stays WiFi-associated after boot (no switch to ESP-NOW time-share),
# the mesh rides the AP channel (pinned to ch1 = north-bedroom), and mesh + MQTT
# flushes run CONCURRENTLY while the Bench beacon seq-gap loss/RTT is logged to
# serial. Builds on espnow. Everything it changes is `cfg(feature = "coexist-soak")`.
coexist-soak = ["espnow"]

# #22 passive BLE observer. A node runs the ESP32-C3's Bluetooth controller as a
# PASSIVE scanner (never connects, never active-scans) sharing the single 2.4 GHz
# radio with WiFi + ESP-NOW under Espressif's software coexistence arbiter, collects
# room-presence sightings (MAC + RSSI + ad-type summary), and relays a summary
# gateway-ward → retained `smol/<id>/ble` (the DIAG/SCAN relay twin) + a `ble=<count>`
# DIAG scalar. Builds on `espnow` and turns on esp-wifi's `ble` (pulls bt-hci — ALREADY
# in-tree) + `coex` (the 3rd-tenant time-slice arbiter). `default`/wifi/espnow/wled/cast
# builds are BYTE-FREE of it (`net::ble`/`net::ble_scan` are `#![cfg(feature = "ble")]`
# and every hook is cfg-gated). ⚠️ Experimental: gated on the #23 coexist proof + a
# ≥1 h mesh-stability soak (issue #22). Bumps the shared heap 72→96 KB (net::init_heap).
ble = ["espnow", "esp-wifi/ble", "esp-wifi/coex", "dep:embedded-io"]

[profile.release]
# esp-wifi strongly recommends opt-level "s"/2/3 and LTO; the radio blobs are
# timing-sensitive and misbehave when built at opt-level 0.
opt-level = "s"
lto = "fat"
codegen-units = 1
overflow-checks = false

# 🟥 #32 BUILD GATE (MANDATORY — spike-proven, issue-32-spike-result.md): without this,
# ed25519-compact's `double_scalarmult_vartime` inlines/unrolls under opt="s"+fat-LTO into a
# single ~1 MB function → total ed25519 symbols ~1.19 MB → the OTA image overflows the slot
# (0x1F0000). opt="z" collapses it 32× (~93 KB) → production image ~37% of slot. Per-PACKAGE
# only: the global stays opt="s" (the radio blobs' required timing). Verify runs once per OTA
# (~ms) on PUBLIC data, so size-over-speed here is free (constant-time not a concern).
[profile.release.package.ed25519-compact]
opt-level = "z"

[profile.dev]
opt-level = "s"
