[package]
name = "clock"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
description = "smol: ESP32-C3 SuperMini + 0.42\" SSD1306 OLED clock with WiFi/NTP + ESP-NOW"
license = "MIT OR Apache-2.0"

# -----------------------------------------------------------------------------
# Pinned, mutually-compatible crate versions.
#
# The esp-hal / esp-wifi / esp-hal-embassy / esp-alloc quartet is extremely
# version-sensitive because esp-wifi links against esp-hal INTERNAL APIs, and
# its Cargo `^1.0.0-rc.0` requirement is looser than what actually compiles.
#
# THE KEY GOTCHA: esp-wifi 0.15.x calls `esp_hal::rng::Rng::new(peripherals.RNG)`
# internally. In esp-hal 1.0.0-rc.1 and the 1.0.0 release, `Rng::new()` was
# changed to take NO argument, which makes esp-wifi 0.15.x fail to compile
# ("this function takes 0 arguments but 1 was supplied") even though Cargo's
# semver check passes. We therefore pin esp-hal to the EXACT release esp-wifi
# 0.15.x was built against: the 2025-07-16 cluster.
#
#   esp-hal          1.0.0-rc.0  (2025-07-16; Rng::new(RNG) still takes the peripheral)
#   esp-wifi         0.15.0      (2025-07-16; requires esp-alloc ^0.8.0)
#   esp-hal-embassy  0.9.0       (2025-07-16)
#   esp-alloc        0.8.0
#   esp-backtrace    0.17.0      (2025-07-16)
#   esp-println      0.15.0      (2025-07-16)
#
# ssd1306 0.10.0 + embedded-graphics 0.8 target embedded-hal 1.0, which esp-hal
# 1.x implements, so the display stack composes cleanly with the HAL.
# -----------------------------------------------------------------------------

[dependencies]
# --- Core HAL (Phase 1, always on) ---------------------------------------
# `unstable` is required for I2C/SPI/RNG and is also a hard requirement of
# esp-wifi. `esp32c3` selects the chip. `rt` + `exception-handler` come from
# the default features (runtime + fault handler).
esp-hal = { version = "=1.0.0-rc.0", features = ["esp32c3", "unstable"], optional = true }
# NOTE: esp-hal's default features already install the exception handler, so
# esp-backtrace only provides the panic handler + backtrace printing here.
# Enabling esp-backtrace's `exception-handler` too causes a duplicate
# `ExceptionHandler` symbol and an LTO bitcode-load failure at link time.
esp-backtrace = { version = "=0.17.0", features = ["esp32c3", "panic-handler", "println"], optional = true }
# Force the USB Serial/JTAG backend explicitly. This board's console is the
# native USB Serial/JTAG link (/dev/ttyACM0); esp-println's default `auto`
# backend only routes to USB-JTAG when it detects host SOF packets at the
# instant it writes, which proved unreliable during the busy WiFi burst and
# left app logs going to the (unwired) UART0. `jtag-serial` pins the output to
# USB-JTAG so boot/WiFi/NTP/ESP-NOW logs always appear on /dev/ttyACM0.
esp-println = { version = "=0.15.0", default-features = false, optional = true, features = [
    "esp32c3",
    "log-04",
    "jtag-serial",
    "colors",
    "critical-section",
] }
log = "0.4"
# `nb::block!` turns esp-hal's non-blocking `Adc::read_oneshot` (nb::Result) into
# a short busy-wait for the battery-voltage read in `src/sensors.rs`. Resolves to
# the 1.1.0 already in the tree (embedded-hal etc. depend on it) — no lock churn.
nb = "1"

# --- Display stack (Phase 1) ---------------------------------------------
# ssd1306 is the concrete panel driver — HAL-facing (I2C), so it rides `hw`.
# embedded-graphics is pure (target-agnostic) and stays ALWAYS-on: both the
# firmware AND the #152 host/wasm emulator draw through it.
ssd1306 = { version = "=0.10.0", optional = true }
embedded-graphics = "=0.8.1"

# --- WiFi / NTP (Phase 2, feature = "wifi") ------------------------------
# esp-alloc pinned to 0.8.x to satisfy esp-wifi 0.15.1's `^0.8.0` requirement.
esp-alloc = { version = "=0.8.0", optional = true }
esp-wifi-sys = { version = "=0.7.1", optional = true, default-features = false }
esp-wifi = { version = "=0.15.0", optional = true, default-features = false, features = [
    "esp32c3",
    "wifi",
    "esp-alloc",
    "smoltcp",
    # esp-wifi needs a preemption scheduler backing its `esp_wifi_preempt_*`
    # os-adapter hooks. `builtin-scheduler` is normally in esp-wifi's default
    # feature set, but we set `default-features = false`, so we must re-add it
    # explicitly (otherwise: `undefined symbol: esp_wifi_preempt_*` at link).
    "builtin-scheduler",
] }
smoltcp = { version = "=0.12.0", optional = true, default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "proto-dhcpv4",
    "socket-udp",
    "socket-dhcpv4",
    "socket-tcp",
] }

# --- OTA (Phase B, issue #6) — HAL-decoupled, folded into `wifi` ----------
# Spike-proven co-compile with the pinned quartet (WAVE 10). Both are optional
# and pulled ONLY by `wifi`, so the `default` (no-radio) build compiles NO OTA
# code. `esp32c3` on esp-bootloader-esp-idf is REQUIRED — without it the crate's
# rom.rs references an unresolved `esp_rom_sys` (md5/crc pulled by the chip
# feature). esp-storage gives XIP-safe flash writes (FlashStorage auto-detects
# 4 MB); esp-bootloader-esp-idf gives the otadata slot/state API + esp_app_desc!.
esp-storage = { version = "=0.7.0", optional = true, features = ["esp32c3"] }
esp-bootloader-esp-idf = { version = "=0.2.0", optional = true, features = ["esp32c3"] }
# Software SHA-256 for the OTA image integrity gate. Chosen over the HW `esp_hal::sha`
# peripheral deliberately: the HW path needs the SHA peripheral threaded through boot
# into the OTA burst + a self-referential `ShaDigest` (borrows the `Sha` beside it),
# whereas `sha2` is peripheral-free + move-friendly. Cost is ~4 KB flash — negligible
# at ~30% slot usage (3.3x headroom). Hashing is bound by the ~600 KB HTTP download,
# not the digest, so there's no throughput reason to prefer HW here. (spec §Stage C-4.)
sha2 = { version = "0.10", default-features = false, optional = true }
# The `NorFlash` trait (erase/write) whose impl on esp-storage's FlashStorage the OTA
# ImageWriter drives. Trait-only crate; pin to the 0.3.x esp-storage already links.
embedded-storage = { version = "0.3", optional = true }
# #32 OTA authenticity: Ed25519 VERIFY-ONLY over the signed manifest ("build|size|sha256").
# no_std, pure-Rust, no getrandom/curve25519 (self-contained) — spike-proven co-compile vs the
# pinned quartet on riscv32imc (issue-32-spike-result.md). Gated in `espnow` (only run_ota_fetch
# verifies) → default/wifi-only builds pull NO crypto. ⚠️ REQUIRES the opt-z per-pkg override in
# [profile.release.package.ed25519-compact] below — without it the scalar-mult unrolls to ~1.19 MB.
ed25519-compact = { version = "2", default-features = false, optional = true }

# --- ESP-NOW (Phase 3, feature = "espnow") -------------------------------
# ESP-NOW support lives inside esp-wifi behind its `esp-now` feature.
# (No extra top-level crate; the feature is toggled on esp-wifi below.)

[features]
# Phase 1 only: clock on the OLED. `default` = `hw` so `cargo build --release` with no
# flags is the guaranteed-green firmware baseline — BYTE-IDENTICAL to before the #152
# split (the bare-metal crates were non-optional before; now they ride `hw`, which
# `default` and every firmware tier pull, so the same deps + code compile).
default = ["hw"]

# #152 host-emulator boundary. The bare-metal crates (esp-hal / esp-backtrace /
# esp-println / ssd1306) are `optional` so a NON-hardware target (the `hostsim` wasm lib)
# builds the pure game/render cores without them. `hw` re-bundles them; it is implied by
# `default` + `wifi` (⊃ espnow/io/cast/wled), so no firmware build changes.
hw = ["dep:esp-hal", "dep:esp-backtrace", "dep:esp-println", "dep:ssd1306"]

# #152 web emulator: compile the crate's LIBRARY (src/lib.rs) exposing ONLY the pure
# plugin/render cores (app contract + snake + clock + input Press + sensors/units host
# stubs) for a host/wasm target — NO `hw` crates, NO radio. Used solely by the `web-emu`
# cdylib; the firmware BIN (src/main.rs) is never compiled under this feature. Every
# hostsim change in the shared source is `#[cfg(feature="hostsim")]`/`#[cfg(not)]`, so the
# firmware (hw) path is untouched. See src/lib.rs.
hostsim = []

# #72 IO/component registry (ESPHome inverted, "fat image / thin runtime config").
# Compiles the digital-`Flex` driver menu into ONE image; a runtime pin-map relayed
# over the #56 keyed-CFG `G` channel selects which driver binds each free GPIO at
# boot — no recompile. Default-OFF so the default/wifi/espnow builds stay BYTE-FREE
# of it (#44): `src/io.rs` is `#![cfg(feature = "io")]` and every hook is cfg-gated.
# Implies `espnow`: the pin-map's transport (the CfgTracker relay + `take_cfg_offer`
# apply) lives in the ESP-NOW radio manager, and the fleet runs espnow end-to-end.
# v1 = digital in/out only (the provably-feasible `Flex` case); ADC/PWM/WS2812-RMT
# are deferred to v1.5/v2 behind the §2.4 bind-time spike.
io = ["espnow"]

# Phase 2: WiFi STA + SNTP time sync (+ optional weather).
# Also carries OTA (issue #6): the flash/otadata crates + esp-backtrace's
# `custom-halt` (panic→software_reset, MF-2) are pulled in HERE, not on the base
# esp-backtrace dep, so the `default` build's panic behavior stays the stock
# loop{} (OTA rollback semantics only matter once there's a radio to fetch over).
wifi = [
    "hw", # #152: every firmware tier carries the bare-metal crates (byte-identical to before)
    "dep:esp-alloc",
    "dep:esp-wifi",
    "dep:esp-wifi-sys",
    "dep:smoltcp",
    "dep:esp-storage",
    "dep:esp-bootloader-esp-idf",
    "dep:sha2",
    "dep:embedded-storage",
    "esp-backtrace/custom-halt",
]

# Phase 3: ESP-NOW peer messaging + WiFi<->ESP-NOW switching.
# Builds on `wifi` (shares the radio init path) and turns on esp-wifi/esp-now.
espnow = ["wifi", "esp-wifi/esp-now", "dep:ed25519-compact"]

# #25 WLED WiZmote-emit: smol impersonates a WLED "linked remote" (13-B WiZmote
# ESP-NOW broadcast). Needs the ESP-NOW broadcast path + RadioManager, so it builds
# on `espnow`. Nothing new links — pure encode + the existing `esp_now.send`. The
# default build is BYTE-FREE of it (symbol-absence provable; net/wled.rs is
# `#![cfg(feature = "wled")]` and every hook is `#[cfg(feature = "wled")]`).
wled = ["espnow"]

# #26 smol Cast: mirror the gateway's OLED image onto a network WLED matrix as
# realtime UDP pixels (DNRGB, :21324) — NOT ESP-NOW (cleaner than #25's control path).
# Builds on `espnow` (⊃ `wifi`): casting is a GATEWAY-role activity — it needs an
# associated STA to reach the matrix AND the recurring gateway flush that carries the
# stream, both of which only the espnow build has (a wifi-only board only associates
# once at boot). Pure-additive: NO new crate links — a DrawTarget tee mirrors the
# framebuffer, a pure packer encodes DNRGB, and the existing flush association carries
# it. The default / wifi / espnow / wled builds are BYTE-FREE of it (`net::cast*` is
# `#[cfg(feature = "cast")]` and every hook is cfg-gated; the `Oled` type only swaps to
# the tee under this flag).
cast = ["espnow"]

# COEXIST SOAK (issue #23 PART 1 — the gating experiment, NOT for production).
# The gateway stays WiFi-associated after boot (no switch to ESP-NOW time-share),
# the mesh rides the AP channel (pinned to ch1 = north-bedroom), and mesh + MQTT
# flushes run CONCURRENTLY while the Bench beacon seq-gap loss/RTT is logged to
# serial. Builds on espnow. Everything it changes is `cfg(feature = "coexist-soak")`.
coexist-soak = ["espnow"]

# #13 MESH-TEST rig (NOT for production). A debug-only MAC deaf-list: a node silently
# drops inbound frames whose source MAC is in the per-board `board::DEAF_MACS`, so the
# 3-board fleet can be forced into a 2-hop topology (G→R→F) to validate routed multi-hop
# (scratch/smol-dreamteam/13-rig-design.md). Builds on espnow. Default-OFF so a production
# build is BYTE-FREE of it AND structurally CANNOT be made deaf (no field, no hook) — the
# strongest guard against a "won't-rejoin" leftover-deaf ghost. DIAG surfaces deaf=/ddrops=.
mesh-test = ["espnow"]

[profile.release]
# esp-wifi strongly recommends opt-level "s"/2/3 and LTO; the radio blobs are
# timing-sensitive and misbehave when built at opt-level 0.
opt-level = "s"
lto = "fat"
codegen-units = 1
overflow-checks = false

# 🟥 #32 BUILD GATE (MANDATORY — spike-proven, issue-32-spike-result.md): without this,
# ed25519-compact's `double_scalarmult_vartime` inlines/unrolls under opt="s"+fat-LTO into a
# single ~1 MB function → total ed25519 symbols ~1.19 MB → the OTA image overflows the slot
# (0x1F0000). opt="z" collapses it 32× (~93 KB) → production image ~37% of slot. Per-PACKAGE
# only: the global stays opt="s" (the radio blobs' required timing). Verify runs once per OTA
# (~ms) on PUBLIC data, so size-over-speed here is free (constant-time not a concern).
[profile.release.package.ed25519-compact]
opt-level = "z"

[profile.dev]
opt-level = "s"
